--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,7 +10,7 @@ name = "polars_lean"
 crate-type = ["staticlib"]
 
 [dependencies]
-polars = { version = "0.35.4", features = ["dtype-full"] }
+polars = { version = "0.35.4", features = ["dtype-full", "lazy"] }
 
 [build-dependencies]
 bindgen = "0.69.1"
@@ -20,3 +20,4 @@ panic = "abort"
 
 [profile.release]
 panic = "abort"
+debug = true
